@@ -4,12 +4,13 @@
   state:
     release: alpha
     api: alpha
-  date: 2021-03-13
+  date: 2021-10-16
   license:
     identifier: LGPL-2.1
     uri: http://www.horde.org/licenses/lgpl21
-  notes: |+
-    
+  notes: |
+    [rla] Make horde-prefs cli composer-ready and compatible with horde config.
+    |+
 3.0.0alpha3:
   api: 3.0.0alpha1
   state:
